# CSE_Master

NumPDE/exercise_01/: example_1.4.py
NumPDE/exercise_02/: example_4.py
NumPDE/exercise_03/: example_3.3.py  example_3.4.py
NumPDE/exercise_04/: example_4.1.py  example_4.3.py
NumericalComputation/UE_10/: 10_2.py  10_4.py
NumericalComputation/UE_11/: continuation_method.py  power_method.py
NumericalComputation/UE_12/: QR.py  secant_method.py
NumericalComputation/UE_2/: harmonic_series.py  symmetric_diff_quotient.py
NumericalComputation/UE_3/: chebyshev.py  trapezoidal_quadrature.py
NumericalComputation/UE_4/: plots.py  romberg_extrapolation.py
NumericalComputation/UE_5/: composite_gaus.py  transformations.py
NumericalComputation/UE_6/: quadrature_2D.py  sequence.py
NumericalComputation/UE_8/: least_squares.py
NumericalComputation/UE_9/: newton_1D.py
SimulationOfFabrication/exercise01/: CMakeCache.txt  CMakeLists.txt  Makefile  README.me  cmake_install.cmake  curvature_step.vtk  one_step  test  two_steps
SimulationOfFabrication/exercise01/Assignment1/SampleReport/: SampleReport.tex
SimulationOfFabrication/exercise01/include/: Advancer.h  Grid.h  GridPoint.h  geometry.h  vtkOutput.hpp
SimulationOfFabrication/exercise01/src/: Advancer.cpp  Grid.cpp  GridPoint.cpp  advancer_exe.cpp  grid_exe.cpp  main.cpp
